# LAB

./: .gitignore  ARCH.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
source/: __init__.py  constants.py  settings.py
source/api/: __init__.py  committee.py
source/audit/: __init__.py  package.py  storage.py
source/cli/: __init__.py  main.py  progress.py  repl.py
source/committee/: __init__.py  agent.py  commands.py  prompts.py
source/contracts/: __init__.py  audit.py  corpus.py  decision.py  request.py  tool_results.py
source/corpus/: __init__.py  agent_annotator.py  annotator.py  constants.py  context.py  dedup.py  index.py  loader.py  metadata.py  tfidf_index.py
source/corpus/embeddings/: __init__.py  chunker.py  hybrid.py  providers.py  reranker.py  vector_index.py
source/export/: __init__.py  html.py
source/llm/: __init__.py  call.py
source/providers/: __init__.py  anthropic_provider.py  config.py  factory.py  local_provider.py
source/reasoning/: __init__.py  priority.py
source/tools/: __init__.py  attachment_tools.py  corpus_tools.py  observer.py  precedent_tools.py  reasoning_tools.py  validation_tools.py
source/web/: __init__.py  app.py  auth.py  chat.py  pages.py  viewer.py
source/web/templates/: base.html  home.html  putevoditel.html
source/web/templates/dumatel/: decision.html  index.html
static/: cases.json
static/css/: panel.css
